--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.26.0",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.6",
     "axios": "^1.13.1",
@@ -19,6 +20,8 @@
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "stream-chat": "^9.25.0",
+    "stream-chat-react": "^13.11.0",
     "tailwindcss": "^4.1.16",
     "zustand": "^5.0.8"
   },
